New Class and Features

--- a/Copm_Pract_RZD/Copm_Pract_RZD.vcxproj.filters
+++ b/Copm_Pract_RZD/Copm_Pract_RZD.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Variables.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Class_Train.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
