--- a/Copm_Pract_RZD/Copm_Pract_RZD.vcxproj
+++ b/Copm_Pract_RZD/Copm_Pract_RZD.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="Wizard.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Class_Train.h" />
     <ClInclude Include="DataBaseViewer.h">
       <FileType>CppForm</FileType>
     </ClInclude>
